crates/mega-evm/tests/satin/snapshots/satin__withheld_gas__an_answer_past_the_allowance_with_a_spill_is_billed_nothing_of_it.snap
---
source: crates/mega-evm/tests/satin/withheld_gas.rs
expression: "&views"
---
{
  "a history gas spill, gas limit 100000000": {
    "result": {
      "kind": "revert",
      "reason": "MegaLimitExceeded(ComputeGas, 20000000)",
      "output": "0x84b9026700000000000000000000000000000000000000000000000000000000000000020000000000000000000000000000000000000000000000000000000001312d00",
      "created": null,
      "logs": []
    },
    "gas": {
      "regular": 15000,
      "state": 0,
      "history": 27280,
      "history_bytes": 310,
      "reservoir_remaining": 0,
      "floor": 15000,
      "gas_used": 42280
    },
    "result_gas": {
      "total_gas_spent": 42280,
      "state_gas_spent": 0,
      "refunded": 0,
      "floor_gas": 15000,
      "reservoir_remaining": 0
    },
    "usage": {
      "data_size": 310,
      "write_records": 0
    },
    "limit_stop": {
      "kind": "ComputeGas",
      "limit": 20000000,
      "used": 0
    },
    "oracle_reads": [],
    "accounts": {
      "0x0000000000000000000000000000000000bef000": {
        "balance": "0x0",
        "nonce": 1,
        "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
        "created": false,
        "selfdestructed": false,
        "storage": []
      },
      "0x4200000000000000000000000000000000000019": "unchanged",
      "0x420000000000000000000000000000000000001a": "unchanged",
      "0x420000000000000000000000000000000000001b": "unchanged"
    }
  },
  "a history gas spill, gas limit 300000000": {
    "result": {
      "kind": "revert",
      "reason": "MegaLimitExceeded(ComputeGas, 20000000)",
      "output": "0x84b9026700000000000000000000000000000000000000000000000000000000000000020000000000000000000000000000000000000000000000000000000001312d00",
      "created": null,
      "logs": []
    },
    "gas": {
      "regular": 15000,
      "state": 0,
      "history": 27280,
      "history_bytes": 310,
      "reservoir_remaining": 99972720,
      "floor": 15000,
      "gas_used": 42280
    },
    "result_gas": {
      "total_gas_spent": 42280,
      "state_gas_spent": 0,
      "refunded": 0,
      "floor_gas": 15000,
      "reservoir_remaining": 99972720
    },
    "usage": {
      "data_size": 310,
      "write_records": 0
    },
    "limit_stop": {
      "kind": "ComputeGas",
      "limit": 20000000,
      "used": 0
    },
    "oracle_reads": [],
    "accounts": {
      "0x0000000000000000000000000000000000bef000": {
        "balance": "0x0",
        "nonce": 1,
        "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
        "created": false,
        "selfdestructed": false,
        "storage": []
      },
      "0x4200000000000000000000000000000000000019": "unchanged",
      "0x420000000000000000000000000000000000001a": "unchanged",
      "0x420000000000000000000000000000000000001b": "unchanged"
    }
  },
  "a state gas spill, gas limit 100000000": {
    "result": {
      "kind": "revert",
      "reason": "MegaLimitExceeded(ComputeGas, 20000000)",
      "output": "0x84b9026700000000000000000000000000000000000000000000000000000000000000020000000000000000000000000000000000000000000000000000000001312d00",
      "created": null,
      "logs": []
    },
    "gas": {
      "regular": 15000,
      "state": 0,
      "history": 27280,
      "history_bytes": 310,
      "reservoir_remaining": 0,
      "floor": 15000,
      "gas_used": 42280
    },
    "result_gas": {
      "total_gas_spent": 42280,
      "state_gas_spent": 0,
      "refunded": 0,
      "floor_gas": 15000,
      "reservoir_remaining": 0
    },
    "usage": {
      "data_size": 310,
      "write_records": 0
    },
    "limit_stop": {
      "kind": "ComputeGas",
      "limit": 20000000,
      "used": 0
    },
    "oracle_reads": [],
    "accounts": {
      "0x0000000000000000000000000000000000bef000": {
        "balance": "0x0",
        "nonce": 1,
        "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
        "created": false,
        "selfdestructed": false,
        "storage": []
      },
      "0x4200000000000000000000000000000000000019": "unchanged",
      "0x420000000000000000000000000000000000001a": "unchanged",
      "0x420000000000000000000000000000000000001b": "unchanged"
    }
  },
  "a state gas spill, gas limit 300000000": {
    "result": {
      "kind": "revert",
      "reason": "MegaLimitExceeded(ComputeGas, 20000000)",
      "output": "0x84b9026700000000000000000000000000000000000000000000000000000000000000020000000000000000000000000000000000000000000000000000000001312d00",
      "created": null,
      "logs": []
    },
    "gas": {
      "regular": 15000,
      "state": 0,
      "history": 27280,
      "history_bytes": 310,
      "reservoir_remaining": 99972720,
      "floor": 15000,
      "gas_used": 42280
    },
    "result_gas": {
      "total_gas_spent": 42280,
      "state_gas_spent": 0,
      "refunded": 0,
      "floor_gas": 15000,
      "reservoir_remaining": 99972720
    },
    "usage": {
      "data_size": 310,
      "write_records": 0
    },
    "limit_stop": {
      "kind": "ComputeGas",
      "limit": 20000000,
      "used": 0
    },
    "oracle_reads": [],
    "accounts": {
      "0x0000000000000000000000000000000000bef000": {
        "balance": "0x0",
        "nonce": 1,
        "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
        "created": false,
        "selfdestructed": false,
        "storage": []
      },
      "0x4200000000000000000000000000000000000019": "unchanged",
      "0x420000000000000000000000000000000000001a": "unchanged",
      "0x420000000000000000000000000000000000001b": "unchanged"
    }
  }
}
