crates/mega-evm/tests/satin/snapshots/satin__withheld_gas__an_out_of_gas_nothing_could_pay_halts_as_without_the_read.snap
---
source: crates/mega-evm/tests/satin/withheld_gas.rs
expression: "&summaries(&views)"
---
{
  "a 16 MiB memory expansion, gas limit 100000000, detained": "halt Base(OutOfGas(Memory)); stop -; regular 99972720 state 0 history 27280 history_bytes 310 reservoir_remaining 0 floor 15000 gas_used 100000000; data_size 310 write_records 0; logs 0 accounts 5",
  "a 16 MiB memory expansion, gas limit 100000000, plain": "halt Base(OutOfGas(Memory)); stop -; regular 99972720 state 0 history 27280 history_bytes 310 reservoir_remaining 0 floor 15000 gas_used 100000000; data_size 310 write_records 0; logs 0 accounts 5",
  "a 16 MiB memory expansion, gas limit 300000000, detained": "halt Base(OutOfGas(Memory)); stop -; regular 200000000 state 0 history 27280 history_bytes 310 reservoir_remaining 99972720 floor 15000 gas_used 200027280; data_size 310 write_records 0; logs 0 accounts 5",
  "a 16 MiB memory expansion, gas limit 300000000, plain": "halt Base(OutOfGas(Memory)); stop -; regular 200000000 state 0 history 27280 history_bytes 310 reservoir_remaining 99972720 floor 15000 gas_used 200027280; data_size 310 write_records 0; logs 0 accounts 5",
  "a hash of 2^40 bytes, gas limit 100000000, detained": "halt Base(OutOfGas(Basic)); stop -; regular 99972720 state 0 history 27280 history_bytes 310 reservoir_remaining 0 floor 15000 gas_used 100000000; data_size 310 write_records 0; logs 0 accounts 5",
  "a hash of 2^40 bytes, gas limit 100000000, plain": "halt Base(OutOfGas(Basic)); stop -; regular 99972720 state 0 history 27280 history_bytes 310 reservoir_remaining 0 floor 15000 gas_used 100000000; data_size 310 write_records 0; logs 0 accounts 5",
  "a hash of 2^40 bytes, gas limit 300000000, detained": "halt Base(OutOfGas(Basic)); stop -; regular 200000000 state 0 history 27280 history_bytes 310 reservoir_remaining 99972720 floor 15000 gas_used 200027280; data_size 310 write_records 0; logs 0 accounts 5",
  "a hash of 2^40 bytes, gas limit 300000000, plain": "halt Base(OutOfGas(Basic)); stop -; regular 200000000 state 0 history 27280 history_bytes 310 reservoir_remaining 99972720 floor 15000 gas_used 200027280; data_size 310 write_records 0; logs 0 accounts 5",
  "an operand above usize, gas limit 100000000, detained": "halt Base(OutOfGas(InvalidOperand)); stop -; regular 99972720 state 0 history 27280 history_bytes 310 reservoir_remaining 0 floor 15000 gas_used 100000000; data_size 310 write_records 0; logs 0 accounts 5",
  "an operand above usize, gas limit 100000000, plain": "halt Base(OutOfGas(InvalidOperand)); stop -; regular 99972720 state 0 history 27280 history_bytes 310 reservoir_remaining 0 floor 15000 gas_used 100000000; data_size 310 write_records 0; logs 0 accounts 5",
  "an operand above usize, gas limit 300000000, detained": "halt Base(OutOfGas(InvalidOperand)); stop -; regular 200000000 state 0 history 27280 history_bytes 310 reservoir_remaining 99972720 floor 15000 gas_used 200027280; data_size 310 write_records 0; logs 0 accounts 5",
  "an operand above usize, gas limit 300000000, plain": "halt Base(OutOfGas(InvalidOperand)); stop -; regular 200000000 state 0 history 27280 history_bytes 310 reservoir_remaining 99972720 floor 15000 gas_used 200027280; data_size 310 write_records 0; logs 0 accounts 5"
}
