crates/mega-evm/tests/satin/snapshots/satin__withheld_gas__gas_answers_the_whole_regular_gas_after_a_read.snap
---
source: crates/mega-evm/tests/satin/withheld_gas.rs
expression: "&views"
---
{
  "gas limit 100000000, detained": {
    "result": {
      "kind": "success",
      "reason": "Stop",
      "output": "0x",
      "created": null,
      "logs": []
    },
    "gas": {
      "regular": 37109,
      "state": 97920,
      "history": 30800,
      "history_bytes": 350,
      "reservoir_remaining": 0,
      "floor": 15000,
      "gas_used": 165829
    },
    "result_gas": {
      "total_gas_spent": 165829,
      "state_gas_spent": 97920,
      "refunded": 0,
      "floor_gas": 15000,
      "reservoir_remaining": 0
    },
    "usage": {
      "data_size": 350,
      "write_records": 1
    },
    "limit_stop": null,
    "oracle_reads": [],
    "accounts": {
      "0x0000000000000000000000000000000000bef000": "unchanged",
      "0x0000000000000000000000000000000000d00000": {
        "balance": "0x0",
        "nonce": 1,
        "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
        "created": false,
        "selfdestructed": false,
        "storage": []
      },
      "0x0000000000000000000000000000000000d00001": {
        "balance": "0x0",
        "nonce": 0,
        "code_hash": "0xc35c9b669942f40875e26728f5df5418e7278354d413a9957670b01a02265113",
        "created": false,
        "selfdestructed": false,
        "storage": [
          {
            "slot": "0x0",
            "original": "0x0",
            "present": "0x5f53bd2"
          }
        ]
      },
      "0x4200000000000000000000000000000000000019": "unchanged",
      "0x420000000000000000000000000000000000001a": "unchanged",
      "0x420000000000000000000000000000000000001b": "unchanged"
    }
  },
  "gas limit 100000000, plain": {
    "result": {
      "kind": "success",
      "reason": "Stop",
      "output": "0x",
      "created": null,
      "logs": []
    },
    "gas": {
      "regular": 37109,
      "state": 97920,
      "history": 30800,
      "history_bytes": 350,
      "reservoir_remaining": 0,
      "floor": 15000,
      "gas_used": 165829
    },
    "result_gas": {
      "total_gas_spent": 165829,
      "state_gas_spent": 97920,
      "refunded": 0,
      "floor_gas": 15000,
      "reservoir_remaining": 0
    },
    "usage": {
      "data_size": 350,
      "write_records": 1
    },
    "limit_stop": null,
    "oracle_reads": [],
    "accounts": {
      "0x0000000000000000000000000000000000bef000": "unchanged",
      "0x0000000000000000000000000000000000d00000": {
        "balance": "0x0",
        "nonce": 1,
        "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
        "created": false,
        "selfdestructed": false,
        "storage": []
      },
      "0x0000000000000000000000000000000000d00001": {
        "balance": "0x0",
        "nonce": 0,
        "code_hash": "0x6a060f2be5aff8ddd6144152bc399c0448737c87c33af1434fb33b64f1d42b45",
        "created": false,
        "selfdestructed": false,
        "storage": [
          {
            "slot": "0x0",
            "original": "0x0",
            "present": "0x5f53bd2"
          }
        ]
      },
      "0x4200000000000000000000000000000000000019": "unchanged",
      "0x420000000000000000000000000000000000001a": "unchanged",
      "0x420000000000000000000000000000000000001b": "unchanged"
    }
  },
  "gas limit 300000000, detained": {
    "result": {
      "kind": "success",
      "reason": "Stop",
      "output": "0x",
      "created": null,
      "logs": []
    },
    "gas": {
      "regular": 37109,
      "state": 97920,
      "history": 30800,
      "history_bytes": 350,
      "reservoir_remaining": 99871280,
      "floor": 15000,
      "gas_used": 165829
    },
    "result_gas": {
      "total_gas_spent": 165829,
      "state_gas_spent": 97920,
      "refunded": 0,
      "floor_gas": 15000,
      "reservoir_remaining": 99871280
    },
    "usage": {
      "data_size": 350,
      "write_records": 1
    },
    "limit_stop": null,
    "oracle_reads": [],
    "accounts": {
      "0x0000000000000000000000000000000000bef000": "unchanged",
      "0x0000000000000000000000000000000000d00000": {
        "balance": "0x0",
        "nonce": 1,
        "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
        "created": false,
        "selfdestructed": false,
        "storage": []
      },
      "0x0000000000000000000000000000000000d00001": {
        "balance": "0x0",
        "nonce": 0,
        "code_hash": "0xc35c9b669942f40875e26728f5df5418e7278354d413a9957670b01a02265113",
        "created": false,
        "selfdestructed": false,
        "storage": [
          {
            "slot": "0x0",
            "original": "0x0",
            "present": "0xbeb8762"
          }
        ]
      },
      "0x4200000000000000000000000000000000000019": "unchanged",
      "0x420000000000000000000000000000000000001a": "unchanged",
      "0x420000000000000000000000000000000000001b": "unchanged"
    }
  },
  "gas limit 300000000, plain": {
    "result": {
      "kind": "success",
      "reason": "Stop",
      "output": "0x",
      "created": null,
      "logs": []
    },
    "gas": {
      "regular": 37109,
      "state": 97920,
      "history": 30800,
      "history_bytes": 350,
      "reservoir_remaining": 99871280,
      "floor": 15000,
      "gas_used": 165829
    },
    "result_gas": {
      "total_gas_spent": 165829,
      "state_gas_spent": 97920,
      "refunded": 0,
      "floor_gas": 15000,
      "reservoir_remaining": 99871280
    },
    "usage": {
      "data_size": 350,
      "write_records": 1
    },
    "limit_stop": null,
    "oracle_reads": [],
    "accounts": {
      "0x0000000000000000000000000000000000bef000": "unchanged",
      "0x0000000000000000000000000000000000d00000": {
        "balance": "0x0",
        "nonce": 1,
        "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
        "created": false,
        "selfdestructed": false,
        "storage": []
      },
      "0x0000000000000000000000000000000000d00001": {
        "balance": "0x0",
        "nonce": 0,
        "code_hash": "0x6a060f2be5aff8ddd6144152bc399c0448737c87c33af1434fb33b64f1d42b45",
        "created": false,
        "selfdestructed": false,
        "storage": [
          {
            "slot": "0x0",
            "original": "0x0",
            "present": "0xbeb8762"
          }
        ]
      },
      "0x4200000000000000000000000000000000000019": "unchanged",
      "0x420000000000000000000000000000000000001a": "unchanged",
      "0x420000000000000000000000000000000000001b": "unchanged"
    }
  }
}
