crates/mega-evm/tests/satin/snapshots/satin__withheld_gas__the_bls12_g1_msm_is_held_from_its_price.snap
---
source: crates/mega-evm/tests/satin/withheld_gas.rs
expression: summaries
---
{
  "past the allowance, within the forward, gas limit 100000000, detained": "revert MegaLimitExceeded(ComputeGas, 11390); stop ComputeGas limit 11390 used 186; regular 16466 state 0 history 55440 history_bytes 630 reservoir_remaining 0 floor 35480 gas_used 71906; data_size 630 write_records 0; logs 0 accounts 5; view 0xdefca24abac6cdff1d81591b65b207b0cb5d1dbf6eab8290827d30eb12962b6f",
  "past the allowance, within the forward, gas limit 100000000, plain": "success Stop; stop -; regular 61345 state 97920 history 58960 history_bytes 670 reservoir_remaining 0 floor 35480 gas_used 218225; data_size 670 write_records 1; logs 0 accounts 7; view 0x1ec1e8c50a37915bea980ba79293cdf13a31c29e00c7198c81f24fc99467d9e1",
  "past the allowance, within the forward, gas limit 300000000, detained": "revert MegaLimitExceeded(ComputeGas, 11390); stop ComputeGas limit 11390 used 186; regular 16466 state 0 history 55440 history_bytes 630 reservoir_remaining 99944560 floor 35480 gas_used 71906; data_size 630 write_records 0; logs 0 accounts 5; view 0xeeac47bb958a923dd5d45abcff15e65ed21563ae445c56b13b3a47da0117ec28",
  "past the allowance, within the forward, gas limit 300000000, plain": "success Stop; stop -; regular 61345 state 97920 history 58960 history_bytes 670 reservoir_remaining 99843120 floor 35480 gas_used 218225; data_size 670 write_records 1; logs 0 accounts 7; view 0x3fdb86f50015e0c998dbfded5d6396203b5ffae275838dbf096ba8419323f270",
  "past the whole forward, gas limit 100000000, detained": "success Stop; stop -; regular 41445 state 0 history 55440 history_bytes 630 reservoir_remaining 0 floor 35480 gas_used 96885; data_size 630 write_records 0; logs 0 accounts 6; view 0x55cf90c2ded3e7ee31b72792106d481e7a958013d45021b9d89e6eec987f44c3",
  "past the whole forward, gas limit 100000000, plain": "success Stop; stop -; regular 41445 state 0 history 55440 history_bytes 630 reservoir_remaining 0 floor 35480 gas_used 96885; data_size 630 write_records 0; logs 0 accounts 6; view 0x55cf90c2ded3e7ee31b72792106d481e7a958013d45021b9d89e6eec987f44c3",
  "past the whole forward, gas limit 300000000, detained": "success Stop; stop -; regular 41445 state 0 history 55440 history_bytes 630 reservoir_remaining 99944560 floor 35480 gas_used 96885; data_size 630 write_records 0; logs 0 accounts 6; view 0x71acca4e5c99f35e64eb7c9980758b73f072778af1d075f511bfceb3aa9e483a",
  "past the whole forward, gas limit 300000000, plain": "success Stop; stop -; regular 41445 state 0 history 55440 history_bytes 630 reservoir_remaining 99944560 floor 35480 gas_used 96885; data_size 630 write_records 0; logs 0 accounts 6; view 0x71acca4e5c99f35e64eb7c9980758b73f072778af1d075f511bfceb3aa9e483a",
  "within the allowance, gas limit 100000000, detained": "success Stop; stop -; regular 61345 state 97920 history 58960 history_bytes 670 reservoir_remaining 0 floor 35480 gas_used 218225; data_size 670 write_records 1; logs 0 accounts 7; view 0x2e5f91542716c6dcef28110e248314c600e989f3a8d28b367d9a7f2abd102505",
  "within the allowance, gas limit 100000000, plain": "success Stop; stop -; regular 61345 state 97920 history 58960 history_bytes 670 reservoir_remaining 0 floor 35480 gas_used 218225; data_size 670 write_records 1; logs 0 accounts 7; view 0x1ec1e8c50a37915bea980ba79293cdf13a31c29e00c7198c81f24fc99467d9e1",
  "within the allowance, gas limit 300000000, detained": "success Stop; stop -; regular 61345 state 97920 history 58960 history_bytes 670 reservoir_remaining 99843120 floor 35480 gas_used 218225; data_size 670 write_records 1; logs 0 accounts 7; view 0xc2593d34e0805c0f16f9cbcf129aacd19d870b8e007e918404b0297f12c8e0cd",
  "within the allowance, gas limit 300000000, plain": "success Stop; stop -; regular 61345 state 97920 history 58960 history_bytes 670 reservoir_remaining 99843120 floor 35480 gas_used 218225; data_size 670 write_records 1; logs 0 accounts 7; view 0x3fdb86f50015e0c998dbfded5d6396203b5ffae275838dbf096ba8419323f270"
}
