crates/mega-evm/tests/satin/snapshots/satin__withheld_gas__the_bls12_g2_msm_is_held_from_its_price.snap
---
source: crates/mega-evm/tests/satin/withheld_gas.rs
expression: summaries
---
{
  "past the allowance, within the forward, gas limit 100000000, detained": "revert MegaLimitExceeded(ComputeGas, 22502); stop ComputeGas limit 22502 used 234; regular 17538 state 0 history 77968 history_bytes 886 reservoir_remaining 0 floor 51864 gas_used 95506; data_size 886 write_records 0; logs 0 accounts 5; view 0xdf7181d8f0a75ec21bc63b8bf9a9219f36442ed8c0bad8e5d61064b8fc25e108",
  "past the allowance, within the forward, gas limit 100000000, plain": "success Stop; stop -; regular 84641 state 97920 history 81488 history_bytes 926 reservoir_remaining 0 floor 51864 gas_used 264049; data_size 926 write_records 1; logs 0 accounts 7; view 0x29b6ecca60ff9bf197eb90524e7a3386bc853da41f1d940990472e19e1953e55",
  "past the allowance, within the forward, gas limit 300000000, detained": "revert MegaLimitExceeded(ComputeGas, 22502); stop ComputeGas limit 22502 used 234; regular 17538 state 0 history 77968 history_bytes 886 reservoir_remaining 99922032 floor 51864 gas_used 95506; data_size 886 write_records 0; logs 0 accounts 5; view 0x5b5585ee40fa696e596ea887b040a3c9797e31b0ce5011e13af232beef7a28e1",
  "past the allowance, within the forward, gas limit 300000000, plain": "success Stop; stop -; regular 84641 state 97920 history 81488 history_bytes 926 reservoir_remaining 99820592 floor 51864 gas_used 264049; data_size 926 write_records 1; logs 0 accounts 7; view 0xd81bc3d6ad0f0f95c8f1d2528ec969797a1e971633ee42c6b17ed6d2c08bda3c",
  "past the whole forward, gas limit 100000000, detained": "success Stop; stop -; regular 64741 state 0 history 77968 history_bytes 886 reservoir_remaining 0 floor 51864 gas_used 142709; data_size 886 write_records 0; logs 0 accounts 6; view 0xd104978e406fedbc4e11acb6d1b6d232371f82ea18552ea44e54cb735c7267e1",
  "past the whole forward, gas limit 100000000, plain": "success Stop; stop -; regular 64741 state 0 history 77968 history_bytes 886 reservoir_remaining 0 floor 51864 gas_used 142709; data_size 886 write_records 0; logs 0 accounts 6; view 0xd104978e406fedbc4e11acb6d1b6d232371f82ea18552ea44e54cb735c7267e1",
  "past the whole forward, gas limit 300000000, detained": "success Stop; stop -; regular 64741 state 0 history 77968 history_bytes 886 reservoir_remaining 99922032 floor 51864 gas_used 142709; data_size 886 write_records 0; logs 0 accounts 6; view 0xff6b486911c5907de73655d8fdbc1f1faff5036afd2c4be122d5f0e2a044d0f8",
  "past the whole forward, gas limit 300000000, plain": "success Stop; stop -; regular 64741 state 0 history 77968 history_bytes 886 reservoir_remaining 99922032 floor 51864 gas_used 142709; data_size 886 write_records 0; logs 0 accounts 6; view 0xff6b486911c5907de73655d8fdbc1f1faff5036afd2c4be122d5f0e2a044d0f8",
  "within the allowance, gas limit 100000000, detained": "success Stop; stop -; regular 84641 state 97920 history 81488 history_bytes 926 reservoir_remaining 0 floor 51864 gas_used 264049; data_size 926 write_records 1; logs 0 accounts 7; view 0x61f609a89c679d1454def93b1b94cf0b06ccaf0ff05fd7570d70071177a9bff7",
  "within the allowance, gas limit 100000000, plain": "success Stop; stop -; regular 84641 state 97920 history 81488 history_bytes 926 reservoir_remaining 0 floor 51864 gas_used 264049; data_size 926 write_records 1; logs 0 accounts 7; view 0x29b6ecca60ff9bf197eb90524e7a3386bc853da41f1d940990472e19e1953e55",
  "within the allowance, gas limit 300000000, detained": "success Stop; stop -; regular 84641 state 97920 history 81488 history_bytes 926 reservoir_remaining 99820592 floor 51864 gas_used 264049; data_size 926 write_records 1; logs 0 accounts 7; view 0xcaf973a3e2f5b1d23759ae86f80842f2af872def997f2d6f58ff08c720d94052",
  "within the allowance, gas limit 300000000, plain": "success Stop; stop -; regular 84641 state 97920 history 81488 history_bytes 926 reservoir_remaining 99820592 floor 51864 gas_used 264049; data_size 926 write_records 1; logs 0 accounts 7; view 0xd81bc3d6ad0f0f95c8f1d2528ec969797a1e971633ee42c6b17ed6d2c08bda3c"
}
