crates/mega-evm/tests/satin/snapshots/satin__withheld_gas__the_bls12_pairing_is_held_from_its_price.snap
---
source: crates/mega-evm/tests/satin/withheld_gas.rs
expression: "&summaries(&views)"
---
{
  "past the allowance, within the forward, gas limit 100000000, detained": "revert MegaLimitExceeded(ComputeGas, 51452); stop ComputeGas limit 51452 used 271; regular 18343 state 0 history 94864 history_bytes 1078 reservoir_remaining 0 floor 64152 gas_used 113207; data_size 1078 write_records 0; logs 0 accounts 5",
  "past the allowance, within the forward, gas limit 100000000, plain": "success Stop; stop -; regular 143346 state 97920 history 98384 history_bytes 1118 reservoir_remaining 0 floor 64152 gas_used 339650; data_size 1118 write_records 1; logs 0 accounts 7",
  "past the allowance, within the forward, gas limit 300000000, detained": "revert MegaLimitExceeded(ComputeGas, 51452); stop ComputeGas limit 51452 used 271; regular 18343 state 0 history 94864 history_bytes 1078 reservoir_remaining 99905136 floor 64152 gas_used 113207; data_size 1078 write_records 0; logs 0 accounts 5",
  "past the allowance, within the forward, gas limit 300000000, plain": "success Stop; stop -; regular 143346 state 97920 history 98384 history_bytes 1118 reservoir_remaining 99803696 floor 64152 gas_used 339650; data_size 1118 write_records 1; logs 0 accounts 7",
  "past the whole forward, gas limit 100000000, detained": "success Stop; stop -; regular 123446 state 0 history 94864 history_bytes 1078 reservoir_remaining 0 floor 64152 gas_used 218310; data_size 1078 write_records 0; logs 0 accounts 6",
  "past the whole forward, gas limit 100000000, plain": "success Stop; stop -; regular 123446 state 0 history 94864 history_bytes 1078 reservoir_remaining 0 floor 64152 gas_used 218310; data_size 1078 write_records 0; logs 0 accounts 6",
  "past the whole forward, gas limit 300000000, detained": "success Stop; stop -; regular 123446 state 0 history 94864 history_bytes 1078 reservoir_remaining 99905136 floor 64152 gas_used 218310; data_size 1078 write_records 0; logs 0 accounts 6",
  "past the whole forward, gas limit 300000000, plain": "success Stop; stop -; regular 123446 state 0 history 94864 history_bytes 1078 reservoir_remaining 99905136 floor 64152 gas_used 218310; data_size 1078 write_records 0; logs 0 accounts 6",
  "within the allowance, gas limit 100000000, detained": "success Stop; stop -; regular 143346 state 97920 history 98384 history_bytes 1118 reservoir_remaining 0 floor 64152 gas_used 339650; data_size 1118 write_records 1; logs 0 accounts 7",
  "within the allowance, gas limit 100000000, plain": "success Stop; stop -; regular 143346 state 97920 history 98384 history_bytes 1118 reservoir_remaining 0 floor 64152 gas_used 339650; data_size 1118 write_records 1; logs 0 accounts 7",
  "within the allowance, gas limit 300000000, detained": "success Stop; stop -; regular 143346 state 97920 history 98384 history_bytes 1118 reservoir_remaining 99803696 floor 64152 gas_used 339650; data_size 1118 write_records 1; logs 0 accounts 7",
  "within the allowance, gas limit 300000000, plain": "success Stop; stop -; regular 143346 state 97920 history 98384 history_bytes 1118 reservoir_remaining 99803696 floor 64152 gas_used 339650; data_size 1118 write_records 1; logs 0 accounts 7"
}
